see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

20-Aug-2010 Jean-Marie Simonet
 # [#21947] Banner Client Editing missing Save & New icon and text. Thanks Roland
 #$ Wrong key in Hathor.
 # [#21912] Inconsistencies with submenus in Bluestork admin menus. Thanks Klas.
 # [#21872] Categories overview & Menu items indentations. Thanks Michael.
 # [#21906] SMTP without authentication not working. Thanks Roland and Ian.
 # [#21954] Registration form data gets lost if save fails. Thanks Nikolai

19-Aug-2010 Jean-Marie Simonet
 # [#21929] Language String Error. Thanks Prasit
 # [#21913] Banner ad component issues. Thanks Prasit
 
18-Aug-2010 Jean-Marie Simonet
 ^# [#21917] Mootools more needs updating to 1.2.4.4. Thanks Matt.
 
17-Aug-2010 Jean-Marie Simonet
 [#21812] contact form not sending email. Thanks Joseph.
 
17-Aug-2010 Andrew Eddie
 # Fixed issue [#21380] session timeout while editing template style in backend, keepalive issue (Elin Waring, Michael Babker).

16-Aug-2010 Jean-Marie Simonet
 $ Customizing a global string in weblinks, newsfeeds, contacts
 
16-Aug-2010 Mark Dexter
 # Reverted [#21558] since it breaks JDateTest unit tests
 # [#21558] Feed datetime formats are invalid (with updated unit test)
 # [#21768] Sample Data for Atomic Template

16-Aug-2010 Andrew Eddie
 # Fixed issue [#21822] Add footer to Bluestork template (Michael Babker).
 # Fixed issue [#21831] JFormFieldCategory relies on a reference to a form (Artyom Bisyarin).
 # Fixed issue [#20994] [patch] Use DOM instead of document.write for font size controls (Rouven Weßling).