@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+20-Aug-2010 Mark Dexter
+ # [#21774] patch for failing system tests [cache related]
+
 20-Aug-2010 Jean-Marie Simonet
  # [#21947] Banner Client Editing missing Save & New icon and text. Thanks Roland
  #$ Wrong key in Hathor.
